--- a/landing-page/src/App.css
+++ b/landing-page/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+#header {
+  display: flex;
+  padding: 46px 0px 0px 0px;
+  width: 100%;
+  height: 120px;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#header-logo {
+  position: absolute;
+  left: 70px;
+  background: url(./images/logo.svg) no-repeat 50% 0;
+  background-size: 190px 36px;
+  height: 80px;
+  width: 190px;
+  /* flex: 1; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#header-menus {
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  left: 25%;
+  width: 35%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-menu {
+  display: flex;
+}
+
+#header-utils {
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  right: 3%;
+  width: 350px;
+}
+
+#header-account {
+  display: flex;
+}
+
+#header-language-now {
+  width: 120px;
+  display: flex;
+  border-bottom: 1px solid black;
+  padding: 0px 5px 5px 5px;
+  box-sizing: border-box;
+}
+
+#header-languages {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#header-lagnuage-option {
+  display: flex;
+  width: 100px;
+  height: 150px;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 10px;
+  box-sizing: border-box;
 }
