--- a/landing-page/src/App.css
+++ b/landing-page/src/App.css
@@ -627,13 +627,229 @@
 #container-magazine {
   width: 100%;
   height: 525px;
-  background-color: chocolate;
+  /* background-color: chocolate; */
+  display: flex;
 }
 
-#contaienr-logo {
+#magazine-live-wrap {
+  width: 50%;
+  height: 100%;
+  background: url("./images/bg_live.jpg") no-repeat 100% 0;
+  display: flex;
+  position: relative;
+}
+
+#magazine-live {
+  background: #41478f;
+  height: 100%;
+  width: 450px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 65px 33px;
+}
+
+#magazine-live-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+#magazine-live-title-img {
+  width: 38px;
+  height: 50px;
+  background-image: url(./images/sp_com.png);
+  background-repeat: no-repeat;
+  background-position-y: -49px;
+  background-position-x: -0px;
+  margin-bottom: 10px;
+}
+
+#magazine-live-title-text {
+  color: #fff;
+  letter-spacing: 2px;
+}
+
+#magazine-live-video-src {
+  width: 100%;
+  height: 100%;
+  background-color: #7d7fa2;
+}
+
+#magazine-live-subscription {
+  margin-top: 20px;
+  color: #fff;
+  text-align: center;
+}
+
+#magazine-live-info {
+  position: absolute;
+  bottom: 0px;
+  left: 450px;
+  width: 240px;
+  box-sizing: border-box;
+  padding: 50px 33px;
+  background-color: #fff;
+}
+
+#magazine-live-info > em {
+  font-size: 23px;
+  color: #41478f;
+  font-style: normal;
+}
+
+span {
+  color: #41478f;
+}
+
+#magazine-back-wrap {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  background: url(./images/bg_road.gif) repeat-x 100% 100%;
+}
+
+#magazine-dokdoMagazine {
+  width: 345px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+#dokdoMagazine-top {
+  height: calc(100% - 188px);
+  box-sizing: border-box;
+  padding: 50px 50px 0;
+  position: relative;
+}
+
+#dokdoMagazine-head-moreBtn {
+  position: absolute;
+  top: 50px;
+  right: 50px;
+}
+
+#dokdoMagazine-bottom {
+  position: relative;
+  height: 188px;
+  background: #d84351;
+}
+
+#dokdoMagazine-bottom-top {
+  width: 100%;
+  padding: 20px 20px 0px 20px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+}
+
+#dokdoMagazine-img {
+  position: absolute;
+  top: 170px;
+  left: 50%;
+  background: url(./images/dokdo_magazine.JPG) no-repeat;
+  background-position: 50% 50%;
+  background-size: 100%;
+  box-shadow: 0 15px 15px rgb(0 0 0 / 15%);
+  width: 164px;
+  height: 219px;
+  transform: translateX(-50%);
+  z-index: 10;
+}
+
+#dokdoMagazine-bottom-top-date {
+  font-size: 16px;
+  color: #fff;
+}
+
+#dokdoMagazine-bottom-top-arrow {
+  width: 28px;
+  height: 9px;
+  background: url(./images/sp_com.png) no-repeat -64px -30px;
+}
+
+#dokdoMagazine-bottom-title {
+  padding-top: 40px;
+  text-align: center;
+  font-size: 20px;
+  letter-spacing: -1px;
+  color: #fff;
+}
+
+#dokdoMagazine-bottom-bottom {
+  position: absolute;
+  bottom: 0px;
+  display: flex;
+  width: 100%;
+  height: 50px;
+}
+
+#dokdoMagazine-bottom-bottom > div {
+  width: 50%;
+  height: 100%;
+  line-height: 50px;
+  text-align: center;
+  color: #fff;
+}
+
+#magazine-dokdo-load {
+  width: calc(100% - 345px);
+  box-sizing: border-box;
+  padding: 50px 0 0 50px;
+  position: relative;
+}
+
+#dokdo-load-top-head-title {
+  font-size: 23px;
+  color: #27272f;
+  font-weight: 500;
+  letter-spacing: -1px;
+}
+
+#dokdo-load-top-head-subscription {
+  margin-top: 20px;
+  font-size: 16px;
+  color: #666;
+  line-height: 1.5em;
+  font-weight: 300;
+  letter-spacing: -0.5px;
+  word-break: keep-all;
+}
+
+#dokdo-load-top-island-img {
+  position: absolute;
+  bottom: 175px;
+  left: 20px;
+  width: 232px;
+  height: 98px;
+  background: url(./images/img_road01.png) no-repeat 50% 0;
+}
+
+#dokdo-load-bottom-contact-title {
+  position: absolute;
+  bottom: 50px;
+  /* left: 0px; */
+  font-size: 16px;
+  color: #fff;
+}
+
+#dokdo-load-bottom-contact-number {
+  font-size: 23px;
+  color: #fff;
+  font-weight: 700;
+}
+/* container-logo */
+
+#container-logo {
   width: 100%;
   height: 69px;
-  background-color: cornflowerblue;
+  /* background-color: cornflowerblue; */
+  max-width: 1400px;
   margin: 40px 0;
 }
 
