alarmZone_Banner : HTML & CSS

--- a/landing-page/src/App.css
+++ b/landing-page/src/App.css
@@ -528,12 +528,14 @@
 }
 
 #eventScheduleNAlarmZone-tail {
+  display: flex;
   width: 50%;
   height: 100%;
   position: absolute;
   background: #f6f1f2;
   z-index: -1;
   right: 0;
+
   /* margin-right: 70px; */
 }
 
@@ -571,6 +573,8 @@
 /* alarmZone */
 
 #alarmZone {
+  display: flex;
+  position: relative;
   width: 50%;
   height: 100%;
   /* background: #f6f1f2; */
@@ -622,6 +626,23 @@
   background-position-y: -8px;
   background-position-x: -244px;
 }
+
+#alarmZone-tail-Banner-wrap {
+  position: absolute;
+  left: 200px;
+  width: 520px;
+  overflow: hidden;
+}
+
+#tail-Banner-list {
+  display: flex;
+  /* transform: translateX(-280px); */
+}
+
+.tail-banner {
+  margin-right: 40px;
+}
+
 /* container-magazine */
 
 #container-magazine {
