--- a/landing-page/src/App.css
+++ b/landing-page/src/App.css
@@ -15,6 +15,7 @@
   box-sizing: border-box;
   width: 100%;
   height: 937px;
+  /* height: 840px; */
 }
 
 #main-video {
@@ -28,7 +29,7 @@
   height: 100%;
 }
 
-#video-OnOffBtn {
+.video-OnOffBtn {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -44,7 +45,7 @@
   box-shadow: 1px 10px 5px rgb(196, 195, 195);
 }
 
-#video-onOffBtnImg {
+#video-OffBtnImg {
   width: 32px;
   height: 30px;
   background-image: url(./images/sp_com.png);
@@ -53,7 +54,16 @@
   background-position-x: -46px;
 }
 
-#video-onOffBtnText {
+#video-OnBtnImg {
+  width: 32px;
+  height: 30px;
+  background-image: url(./images/sp_com.png);
+  background-repeat: no-repeat;
+  background-position-y: -71px;
+  background-position-x: -46px;
+}
+
+.video-OnOffBtnText {
   position: relative;
   top: 10px;
 }
@@ -137,6 +147,91 @@
   transform: rotate(-35deg);
   transition: all 300ms;
 }
+
+#main-link-menu-text {
+  position: absolute;
+  top: 30%;
+  left: 100px;
+  animation: fadeIn 4s;
+  transition: all 1s;
+}
+.main-link-menu-text-title {
+  font-size: 80px;
+  font-weight: 400;
+  color: #fff;
+}
+
+.main-link-menu-text-subscription {
+  font-size: 50px;
+  font-weight: 200;
+  color: #fff;
+  width: 500px;
+  word-break: keep-all;
+}
+
+#main-link-menus {
+  /* display: flex; */
+  flex-direction: column;
+  overflow-x: hidden;
+  position: absolute;
+  left: 45%;
+  top: 30%;
+  /* width: 700px; */
+}
+
+.main-link-menu-top {
+  display: flex;
+  overflow-x: hidden;
+}
+
+.main-link-menu-bottom {
+  display: flex;
+  overflow-x: hidden;
+}
+
+.main-link-menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  width: 100px;
+  margin-right: 30px;
+  margin-bottom: 50px;
+}
+
+.main-link-menu > img {
+  width: 50px;
+  height: 50px;
+}
+
+.main-link-menu > div {
+  color: #fff;
+}
+
+.main-link-menu:hover {
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
 /* sideBar */
 
 #sideBar {
@@ -248,11 +343,12 @@
   display: flex;
   justify-content: space-between;
   position: absolute;
+  top: 50px;
   left: 23%;
-  width: 38%;
+  width: 39%;
   transition: 300ms;
-  color: #333;
-  font-weight: 400;
+  /* color: #333; */
+  /* font-weight: 400; */
 }
 
 /* .header-menu {
@@ -262,7 +358,10 @@
 .header-menu {
   position: relative;
   transition: all 300ms ease;
-  padding: 0 30px 30px;
+  /* width: 300px; */
+  font-size: 15px;
+  /* color: rgb(31, 30, 30); */
+  padding: 0 20px 30px;
   box-sizing: border-box;
   display: flex;
 }
@@ -270,8 +369,8 @@
 .menu-arrow {
   visibility: hidden;
   position: absolute;
-  top: 10px;
-  right: 20px;
+  top: 7px;
+  right: 10px;
   opacity: 0;
   width: 8px;
   height: 6px;
@@ -438,6 +537,10 @@
   cursor: pointer;
 }
 
+#header-login > div {
+  font-size: 14px;
+}
+
 #login-img {
   position: relative;
   top: -2px;
@@ -456,6 +559,10 @@
 #header-join {
   display: flex;
   cursor: pointer;
+}
+
+#header-join > div {
+  font-size: 14px;
 }
 
 #join-img {
@@ -497,7 +604,7 @@
   box-sizing: border-box;
   background-color: white;
   color: #444;
-  transition: all 300ms;
+
   /* cursor: pointer; */
 }
 
@@ -1206,14 +1313,15 @@ span {
   left: -210px;
   margin-top: -8px;
   display: flex;
-  gap: 40px;
+  justify-content: space-between;
+  /* gap: 40px; */
   width: 150px;
   height: 6px;
 }
 
 #container-logo-prev {
   /* margin: auto; */
-  width: 31px;
+  width: 32px;
   height: 8px;
   /* background-color: #000; */
   background: url(./images/sp_com.png);
@@ -1222,7 +1330,7 @@ span {
   background-position-x: -244px;
 }
 
-#container-logo-playNpause {
+#container-logo-play {
   /* margin: auto; */
   width: 8px;
   height: 12px;
@@ -1233,8 +1341,19 @@ span {
   background-position-x: -290px;
 }
 
+#container-logo-pause {
+  /* margin: auto; */
+  width: 14px;
+  height: 15px;
+  /* background-color: #000; */
+  background: url(./images/sp_com.png);
+  background-repeat: no-repeat;
+  background-position-y: -0px;
+  background-position-x: -276px;
+}
+
 #container-logo-next {
-  width: 31px;
+  width: 32px;
   height: 8px;
   background-image: url(./images/sp_com.png);
   background-repeat: no-repeat;
